tests/baselines/reference/annotationDeclarationFieldTypeError3.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError3.ets(4,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'T'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError3.ets (1 errors) ====
    type T = [number, string]
    
    @interface Anno {
        a: T
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'T'.
    }